# shake-futhark

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  README.md  cabal.project.local  demo.fut  shake-futhark.cabal
src/Development/Shake/: Futhark.hs
