name:                shake-futhark
version:             0.1.0.0
synopsis: Dependency tracking for Futhark
description: Dependency trakcing using the [futhark library](http://hackage.haskell.org/package/futhark) for transitive dependencies in Futhark projects
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2020 Vanessa McHale
category:            Futhark, Shake, Development, Build
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     Development.Shake.Futhark
  build-depends:       base >= 4.3 && < 5
                     , futhark
                     , shake
                     , text
                     , containers >= 0.6
  default-language:    Haskell2010
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/vmchale/shake-futhark
